[gd_scene load_steps=62 format=3 uid="uid://vgnya3tw3exm"]

[ext_resource type="Script" uid="uid://b6qgexc2515of" path="res://scripts/player.gd" id="1_lulpo"]
[ext_resource type="Texture2D" uid="uid://4wq12uhwfuak" path="res://assets/sprites/MainPerso/09-Idle Sword/Idle Sword 01.png" id="2_tt825"]
[ext_resource type="Texture2D" uid="uid://jbkcd0uti76d" path="res://assets/sprites/MainPerso/17-Attack 3/Attack 3 01.png" id="3_1tq33"]
[ext_resource type="Texture2D" uid="uid://bqcuxifr3ikmh" path="res://assets/sprites/MainPerso/17-Attack 3/Attack 3 02.png" id="4_tbr7s"]
[ext_resource type="Texture2D" uid="uid://emy2pew4ft6s" path="res://assets/sprites/MainPerso/17-Attack 3/Attack 3 03.png" id="5_lulpo"]
[ext_resource type="Texture2D" uid="uid://djjk0hkintnyc" path="res://assets/sprites/MainPerso/09-Idle Sword/Idle Sword 03.png" id="6_gacn1"]
[ext_resource type="Texture2D" uid="uid://8pgg7ckruttb" path="res://assets/sprites/MainPerso/Sword Effects/26-Attack 3/Attack 3 01.png" id="7_ar8b8"]
[ext_resource type="Texture2D" uid="uid://n70pqr6c5abc" path="res://assets/sprites/MainPerso/14-Hit Sword/Hit Sword 01.png" id="7_pgy6t"]
[ext_resource type="Texture2D" uid="uid://dpwee8ufdgkt5" path="res://assets/sprites/MainPerso/14-Hit Sword/Hit Sword 02.png" id="8_fhj3s"]
[ext_resource type="Texture2D" uid="uid://cwviwt1804lfd" path="res://assets/sprites/MainPerso/Sword Effects/26-Attack 3/Attack 3 02.png" id="8_n18dy"]
[ext_resource type="Texture2D" uid="uid://cda7ynqtnbueb" path="res://assets/sprites/MainPerso/14-Hit Sword/Hit Sword 03.png" id="9_7hyi2"]
[ext_resource type="Texture2D" uid="uid://dk71xs1mgt02i" path="res://assets/sprites/MainPerso/Sword Effects/26-Attack 3/Attack 3 03.png" id="9_cn6kv"]
[ext_resource type="Texture2D" uid="uid://cpmde3hc667uy" path="res://assets/sprites/MainPerso/14-Hit Sword/Hit Sword 04.png" id="10_lnxf3"]
[ext_resource type="Texture2D" uid="uid://b52nnx5qqw1wi" path="res://assets/sprites/MainPerso/09-Idle Sword/Idle Sword 02.png" id="11_atem7"]
[ext_resource type="Texture2D" uid="uid://dat2eox7c4vt0" path="res://assets/sprites/MainPerso/09-Idle Sword/Idle Sword 04.png" id="12_3kq3a"]
[ext_resource type="Texture2D" uid="uid://dc735r3qj5388" path="res://assets/sprites/MainPerso/09-Idle Sword/Idle Sword 05.png" id="13_jieji"]
[ext_resource type="Texture2D" uid="uid://c2blrfo8hut0o" path="res://assets/sprites/MainPerso/11-Jump Sword/Jump Sword 01.png" id="14_cfxfy"]
[ext_resource type="Texture2D" uid="uid://8w47rtnvav01" path="res://assets/sprites/MainPerso/11-Jump Sword/Jump Sword 02.png" id="15_ar8b8"]
[ext_resource type="Texture2D" uid="uid://dpl8067y7pkcn" path="res://assets/sprites/MainPerso/11-Jump Sword/Jump Sword 03.png" id="16_n18dy"]
[ext_resource type="Texture2D" uid="uid://ca2e866uy8g8k" path="res://assets/sprites/MainPerso/10-Run Sword/Run Sword 01.png" id="17_cn6kv"]
[ext_resource type="Texture2D" uid="uid://dd0l22swnuo6f" path="res://assets/sprites/MainPerso/10-Run Sword/Run Sword 02.png" id="18_bybkc"]
[ext_resource type="Texture2D" uid="uid://dwv6icrg68nqi" path="res://assets/sprites/MainPerso/10-Run Sword/Run Sword 03.png" id="19_jry7c"]
[ext_resource type="Texture2D" uid="uid://dklmrdrm2nms1" path="res://assets/sprites/MainPerso/10-Run Sword/Run Sword 04.png" id="20_vbqnt"]
[ext_resource type="Texture2D" uid="uid://kb21keaow2oe" path="res://assets/sprites/MainPerso/10-Run Sword/Run Sword 05.png" id="21_mv7cm"]
[ext_resource type="Texture2D" uid="uid://bydnlx8xkrqiu" path="res://assets/sprites/MainPerso/10-Run Sword/Run Sword 06.png" id="22_r3fff"]
[ext_resource type="AudioStream" uid="uid://cfohnreq5m0gx" path="res://assets/sounds/running-on-concrete-268478.mp3" id="23_1tq33"]
[ext_resource type="Texture2D" uid="uid://km1jj3u2q426" path="res://assets/sprites/MainPerso/Captain Clown Nose without Sword/04-Fall/Fall 01.png" id="23_pgy6t"]
[ext_resource type="AudioStream" uid="uid://c740n0mjk2lc7" path="res://assets/sounds/sword-swing-sfx-407574.mp3" id="24_1tq33"]
[ext_resource type="Texture2D" uid="uid://bn5a72g2877qj" path="res://assets/sprites/MainPerso/Captain Clown Nose without Sword/07-Dead Hit/Dead Hit 01.png" id="24_atem7"]
[ext_resource type="Texture2D" uid="uid://bgey7cplys6qi" path="res://assets/sprites/MainPerso/Captain Clown Nose without Sword/07-Dead Hit/Dead Hit 02.png" id="25_3kq3a"]
[ext_resource type="AudioStream" uid="uid://bdm3vxtjlw1oj" path="res://assets/sounds/Guy Jumping No Copyright HD Sound Effects 2023 Sound Hub (mp3cut.net).wav" id="25_tbr7s"]
[ext_resource type="AudioStream" uid="uid://ccpardvv34kis" path="res://assets/sounds/Male PainHurt Sound Effects - 8 Sounds (mp3cut.net).wav" id="26_00trn"]
[ext_resource type="Texture2D" uid="uid://c4oa46vmpf87l" path="res://assets/sprites/MainPerso/Captain Clown Nose without Sword/07-Dead Hit/Dead Hit 03.png" id="26_jieji"]
[ext_resource type="Texture2D" uid="uid://bnb8yfntwphf4" path="res://assets/sprites/MainPerso/Captain Clown Nose without Sword/07-Dead Hit/Dead Hit 04.png" id="27_cfxfy"]
[ext_resource type="AudioStream" uid="uid://b6okb3obarn4e" path="res://assets/sounds/Drowning - Sound Effect (mp3cut.net).wav" id="27_gacn1"]
[ext_resource type="Texture2D" uid="uid://wt5b6ot8y1en" path="res://assets/sprites/MainPerso/15-Attack 1/Attack 1 01.png" id="32_bybkc"]
[ext_resource type="Texture2D" uid="uid://bcxljwjx64p0o" path="res://assets/sprites/MainPerso/Sword Effects/25-Attack 2/Attack 2 01.png" id="33_3kq3a"]
[ext_resource type="Texture2D" uid="uid://bdxixtur6a1a8" path="res://assets/sprites/MainPerso/15-Attack 1/Attack 1 02.png" id="33_jry7c"]
[ext_resource type="Texture2D" uid="uid://cjd747trnl1w4" path="res://assets/sprites/MainPerso/15-Attack 1/Attack 1 03.png" id="34_vbqnt"]
[ext_resource type="Texture2D" uid="uid://c5t3qpxu4sdw1" path="res://assets/sprites/MainPerso/16-Attack 2/Attack 2 01.png" id="35_mv7cm"]
[ext_resource type="Texture2D" uid="uid://cwl2j8rnn731q" path="res://assets/sprites/MainPerso/16-Attack 2/Attack 2 02.png" id="36_r3fff"]
[ext_resource type="Texture2D" uid="uid://de366ruqw2kc6" path="res://assets/sprites/MainPerso/16-Attack 2/Attack 2 03.png" id="37_5fqik"]
[ext_resource type="Texture2D" uid="uid://dnk8ay8c476" path="res://assets/sprites/MainPerso/20-Throw Sword/Throw Sword 01.png" id="38_r5y8i"]
[ext_resource type="Texture2D" uid="uid://cfhbbtkvd7nc8" path="res://assets/sprites/MainPerso/20-Throw Sword/Throw Sword 02.png" id="39_w4bbh"]
[ext_resource type="Texture2D" uid="uid://bp7h62wkj2o47" path="res://assets/sprites/MainPerso/20-Throw Sword/Throw Sword 03.png" id="40_q7gym"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oprun"]
radius = 8.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3v2ag"]
radius = 9.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fulsm"]
radius = 13.0

[sub_resource type="Animation" id="Animation_f1ej7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_tt825")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hit")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordEffect:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("33_3kq3a")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordEffect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_i4ail"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("3_1tq33"), ExtResource("4_tbr7s"), ExtResource("5_lulpo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordEffect:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("7_ar8b8"), ExtResource("8_n18dy"), ExtResource("9_cn6kv")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordEffect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ar8b8"]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.3, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("24_atem7"), ExtResource("25_3kq3a"), ExtResource("26_jieji"), ExtResource("27_cfxfy")]
}

[sub_resource type="Animation" id="Animation_fhj3s"]
resource_name = "drown"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("23_pgy6t")]
}

[sub_resource type="Animation" id="Animation_ujl30"]
resource_name = "fall"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_gacn1")]
}

[sub_resource type="Animation" id="Animation_31cv2"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_pgy6t"), ExtResource("8_fhj3s"), ExtResource("9_7hyi2"), ExtResource("10_lnxf3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jej6c"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.366667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_tt825"), ExtResource("11_atem7"), ExtResource("6_gacn1"), ExtResource("12_3kq3a"), ExtResource("13_jieji")]
}

[sub_resource type="Animation" id="Animation_ke2ow"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.1, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("14_cfxfy"), ExtResource("15_ar8b8"), ExtResource("16_n18dy")]
}

[sub_resource type="Animation" id="Animation_l71n6"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.233333, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("17_cn6kv"), ExtResource("18_bybkc"), ExtResource("19_jry7c"), ExtResource("20_vbqnt"), ExtResource("21_mv7cm"), ExtResource("22_r3fff")]
}

[sub_resource type="Animation" id="Animation_mv7cm"]
resource_name = "quick_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("32_bybkc"), ExtResource("33_jry7c"), ExtResource("34_vbqnt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, null]
}

[sub_resource type="Animation" id="Animation_bybkc"]
resource_name = "heavy_attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.266667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("35_mv7cm"), ExtResource("36_r3fff"), ExtResource("37_5fqik")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, null]
}

[sub_resource type="Animation" id="Animation_rx12b"]
resource_name = "throw_sword"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("38_r5y8i"), ExtResource("39_w4bbh"), ExtResource("40_q7gym")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw_sword_projectile"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oprun"]
_data = {
&"RESET": SubResource("Animation_f1ej7"),
&"attack": SubResource("Animation_i4ail"),
&"dead": SubResource("Animation_ar8b8"),
&"drown": SubResource("Animation_fhj3s"),
&"fall": SubResource("Animation_ujl30"),
&"heavy_attack": SubResource("Animation_bybkc"),
&"hit": SubResource("Animation_31cv2"),
&"idle": SubResource("Animation_jej6c"),
&"jump": SubResource("Animation_ke2ow"),
&"quick_attack": SubResource("Animation_mv7cm"),
&"run": SubResource("Animation_l71n6"),
&"throw_sword": SubResource("Animation_rx12b")
}

[node name="PlayerTest" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_lulpo")
attacking = null

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_oprun")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
texture = ExtResource("2_tt825")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_3v2ag")

[node name="AttackArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(22, 0)
shape = SubResource("CircleShape2D_fulsm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oprun")
}

[node name="RunningSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_1tq33")
bus = &"SoundEffects"

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_1tq33")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_tbr7s")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("26_00trn")

[node name="DrownSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_gacn1")

[node name="SwordEffect" type="Sprite2D" parent="."]
visible = false
position = Vector2(31, 0)
texture = ExtResource("33_3kq3a")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
